스프링 실습 2일차

--- a/src/main/resources/static/board-insert.html
+++ b/src/main/resources/static/board-insert.html
@@ -6,7 +6,7 @@
     <!-- <script src="/scripts/libs.js" defer></script> -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="/css/tblCss.css" />
+    <link rel="stylesheet" href="/css/mainCss.css" />
     <title>게시판 입력</title>
   </head>
   <body>
